<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/predmet_1"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_1" />

        <Button
            android:id="@+id/predmet_2"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_2" />

        <Button
            android:id="@+id/predmet_3"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_3" />

        <Button
            android:id="@+id/predmet_4"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_4" />

        <Button
            android:id="@+id/predmet_5"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_5" />

        <Button
            android:id="@+id/predmet_6"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_6" />

        <Button
            android:id="@+id/predmet_7"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_7" />

        <Button
        android:id="@+id/predmet_8"
        style="?android:segmentedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/predmet_8" />

        <Button
            android:id="@+id/predmet_9"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_9" />

        <Button
            android:id="@+id/predmet_10"
            style="?android:segmentedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/predmet_10" />


    </LinearLayout>
</ScrollView>